--- a/paper/eacl/eacl2017.tex
+++ b/paper/eacl/eacl2017.tex
@@ -166,6 +166,53 @@ Finally, inflexional  morphology  paradigms  derive  the  in ected  forms  accor
 It is not simple to relate our paradigmatic derivations and the operations of Paninian grammar. Some stem operations relate to morpho-phonetic operations well identified in the central rules (\textit{s\={u}tras} ), such as taking the phonetic grades of \textit{gu\d{n}a} or \textit{v\d{r}ddhi}. Some are dispersed in various parts of the grammar, such as stem substitutions. Still others, such as retroflexion, occur in the  final section (\textit{trip\={a}d\={\i}} )  of  the \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}},  which  comprises  a  list  of  rewrite  rules  which  are applied iteratively at the end of the derivation process, in some kind of phonetic smoothing'' phase. Since the forms stored in our data banks are to be matched to the surface realization of the sentence, this phonetic smoothing must be applied at the time of generation of these forms. Some careful analysis must be done in order to understand the mutual interaction of the retroflexion rules and of the external sandhi rules (which are used in segmentation in the Heritage reader). This analysis will be given in section 4.4 below. The main discrepancy between the Paninian processes and our reader operations is in the order of rewritings. Often the stras relevant to a given operation are dispersed in different sections of the \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}} , and thus it is hard to give the trace of the needed stras . However, in many cases, one can recognize the stra operations from the computer program. A complete analysis, in the speci c case of future passive participles .
 
 
+\section{Data Curation}
+
+\subsection{Rule based corpus}:
+We first created a corpus which contains atleast one examplefor each of the \textit{P\={a}\d{n}ini's} sandhi rules. This brings out how many rules are actually implemented by the splitters. There are 282 examples against 271 rules. The corpus is available at  \url{\textit{giturl}}
+
+This corpus contains examples for both internal sandhi and external sandhi's. There were about 150 examples for internal sandhi and 132 examples for external sandhis.
+
+For example:
+
+\begin{table}[h]
+	\begin{center}
+		\begin{tabular}{|p{0.8cm}|p{1.6cm}|p{1.5cm}|p{1.1cm}|p{1.3cm}|}
+			\hline 
+			\bf S. No.	& \bf word	& \bf split	& \bf Rule	& \bf Type \\
+			\hline
+			int\_1 &	viccheda &	vi+cheda &	6.1.73.1 &	consonant \\
+			int\_2 &	\={a}cch\={a}dayati	& \={a}+ch\={a}dayati	& 6.1.74.1	&	consonant \\
+			ext\_1 &	svacchanda\d{h}	& sva+chanda\d{h}	& 6.1.73.1 &	consonant \\
+			ext\_2 &	m\={a}cchidat &	m\={a}+chidat &	6.1.74.1 &	consonant\\
+
+	\hline
+	\end{tabular}
+  \end{center}
+\caption{\label{font-table} Rule based corpus example }
+\end{table}
+
+In the corpus we generated serial numbers with the information of type of the sandhi, First column contains the compund word followed by the splits. Then we have the rule number corresponding to the  \textit{a\d{s}\d{t}\={a}dhy\={a}y\={\i}}. And the last column reflects the type of the Sandhi.
+	
+\subsection{Literature based corpus}
+We identified there is some mismatch between manual evaluation versus automated evaluated so we created a small set of literature corpus inorder to benchmark our automated tool.
+
+This corpus contains 150 examples from the actual literature.  This was created from 11 different texts. This has 50 examples from one text, and 10 examples each from the other ten texts. This is smaller in size compared to the other literature corpora, hence the evaluation for this was done both manually and using the automated tool. The other three were evaluated with the help of the tool only because of their much larger size.
+
+\subsection{Literature based corpus}
+
+
+This evaluation is useful because the sandhi splitters are more likely to be used to split such words. If the performance of the splitters in splitting these words is satisfactory, one may consider neglecting the rules which these splitters have not been able to implement, because those rules may not be so frequent in use. However, a bad performance in this context is a cause of actual concern. 
+Five different corpora were used for this purpose:
+
+A huge set of corpus was created manual by UoH\footnote{\url{http://sanskrit.uohyd.ac.in/Corpus/}}. We manually verified their corpus and identified that the corpus is not reliable.
+
+The UoH website has 39 sandhi-split corpora but they are not fully correct. There are cases of typos, insufficient splits and even wrong splits. Therefore, they were not directly used for the purpose of automated evaluation. The corpora contained thousands of words in total, and a strategy was worked out to create a subset of them that had no errors.
+
+The strategy involved checking whether the splits could be located in some dictionary. Five dictionaries were used for this purpose. We restricted ourselves only to such cases where the splits could be located, even though they may be many cases of correct splits where the splits themselves cannot be located in the dictionary, because of various reasons (dictionaries may not contain all the declensions/ conjugations of a word, nor they are expected to). Further to check that the sandhied words in such cases did not have typos, a sandhi tool was used to do sandhi of the splits identified in the dictionary and check whether the result in each case matched with the sandhied word as given in the corpus. If the two words did not match for a particular case, it was neglected.
+
+
+
 \section{Methodology of Evaluation:}
 \label{sect:methodology}
 
@@ -214,7 +261,7 @@ INRIA  &  49 (37.1 \%) &  6 (4 \%) & 19.5 \% \\
 \caption{\label{font-table} Evaluation Results }
 \end{table}
 
-Cases not detected by any Splitter- 62 (46.9 %) for External Sandhi and 114 (74 %) for Internal Sandhi
+Cases not detected by any Splitter- 62 (46.9 \%) for External Sandhi and 114 (74 \%) for Internal Sandhi
 
 
 
@@ -260,12 +307,12 @@ This was created from 11 different texts. This has 50 examples from one text, an
 
 \begin{table}[h]
 \begin{center}
-\begin{tabular}{p {1cm} p{2.5cm} p{2.5cm}}
-\hline \bf  Splitter & \bf Manual Evaluation Results & \bf Automated Evaluation Results \\
+\begin{tabular}{| p {1cm} | p{2.3cm} | p{2.5cm} |}
+\hline \bf  Splitter & \bf Manual Evaluation Results (150) & \bf Automated Evaluation Results (150) \\
 \hline
-JNU & $19 /150*100=12.66 \%$  & $15/150*100=10\%$\\
-UoH & $105/150*100=70 \%$  & $98/150*100=65.33\%$\\
-INRIA & $127/150*100=84.66 \%$  & $94/150*100=62.66\%$\\
+JNU & $19 (12.66 \%)$  & $15(10\%)$\\
+UoH & $105 (70 \%)$  & $98 (65.33\%)$\\
+INRIA & $127 (84.66 \%)$  & $94 (62.66\%)$\\
 \hline
 \end{tabular}
 \end{center}
@@ -275,12 +322,12 @@ INRIA & $127/150*100=84.66 \%$  & $94/150*100=62.66\%$\\
 
 \begin{table}[h]
 	\begin{center}
-		\begin{tabular}{p {1cm} p{2.5cm} p{2.5cm}}
-			\hline \bf  Merger & \bf Manual Evaluation Results & \bf Automated Evaluation Results \\
+		\begin{tabular}{|p {1cm}  | p{2.5cm} |}
+			\hline \bf  Merger & \bf Automated Evaluation Results(150) \\
 			\hline
-			JNU & $x \%$  & $75/150*100=50\%$\\
-			UoH & $x \%$  & $129/150*100=86\%$\\
-			INRIA & $x \%$  & $131/150*100=87.33\%$\\
+			JNU &  $75 (50\%)$\\
+			UoH &  $129 (86\%)$\\
+			INRIA & $131 (87.33\%)$\\
 			\hline
 		\end{tabular}
 	\end{center}
